<resources>
    <string name="app_name">NASADesign</string>
    <string name="error">Ошибка загрузки</string>
    <string name="reload">Обновить</string>
    <string name="search">Поиск</string>
    <string name="search_in_wiki">Найти в вкикипедии</string>
    <string name="favorite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="long_text">This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus. In telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May.</string>
    <string name="title_text">Two Clusters and a Comet</string>
    <string name="archive">Архив</string>
    <string name="send">Отправить</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="yellow_theme_str">Желтая тема</string>
    <string name="red_theme_str">Красная тема</string>
    <string name="blue_theme_str">Синяя тема</string>
    <string name="green_theme_str">Зеленая тема</string>
    <string name="choice_theme">Выберите тему</string>
    <string name="sun_system">Солнечная система</string>
    <string name="picture_of_the_day">Картинка дня</string>
    <string name="picture_from_NASA">Картинка с НАСА</string>
    <string name="layouts">Лайауты</string>
    <string name="large_text">
        Давным-давно,
в далекой-далекой галактике…
ЗВЁЗДНЫЕ ВОЙНЫ
Эпизод II
АТАКА КЛОНОВ
В Галактическом Сенате смятение.
Несколько тысяч солнечных систем заявило о намерении выйти из состава республики.
Это сепаратистское движение,возглавляемое таинственным
графом Дуку,сильно осложняет немногочисленным
силам рыцарей Джедаев попытки сохранить мир и порядок в галактике.
Сенатор Амидала, бывшая королева Набу, возвращается
в Галактический  Сенат, чтобы участвовать в голосовании
по спорному вопросу создания РЕСПУБЛИКАНСКОЙ АРМИИ — в помощь оставшимся Джедаям…
Сенатор, мы приближаемся к Корусанту.
Очень хорошо, лейтенант.
У нас получилось.
Полагаю, я ошибался.
Это было не так уж и опасно.
Корде.
Миледи, простите.
Я подвела вас, сенатор.
Нет.
Миледи, вам опасно
здесь находиться.
- Не стоило возвращаться.
- Это голосование очень важно.
Вы выполняли свой долг, а Корде свой. Идём.
Сенатор Амидала, прошу вас.
Не знаю, сколько еще можно оттягивать голосование, друзья мои.
Все больше и больше звездных систем присоединяются к сепаратистам.
- Если будет раскол...
- Я не позволю расколоть...
Республику, существовавшую тысячелетия, на два лагеря.
Я не дам сорвать переговоры.
Но поймите, Джедаев слишком мало, чтобы
защитить Республику. Мы хранители мира,
а не солдаты. Мастер Йода.
Вы считаете, что все идет к войне?
Хмм, темная сторона скрывает всё.
Будущее увидеть невозможно.
Прибыл Комитет Лоялистов, Ваша честь.
- Хорошо. Пригласите их. Мы обсудим это позже.
Сенатор Амидала, трагедия на посадочной площадке...
ужасна. Тепло моему сердцу
живой видеть вас и здоровой.
У вас есть соображения, о том, кто за этим стоит?
Наша разведка сообщает о волнениях среди шахтеров на лунах Набу.
Думаю, это дело рук графа Дуку.
Он политический идеалист, но не убийца.
И потом, миледи, граф Дуку был Джедаем.
Он не пойдет на убийство. Это не в его стиле. Однако опасность, сенатор... весьма велика для вас есть. Мастер Джедай,
могу я... предложить вам взять... сенатора под свою защиту?
Вы уверены, что в данный момент это мудрое решение?
Канцлер, я поверить не могу, что... Ситуация настолько серьёзна?
А я верю, сенатор. Я также прекрасно понимаю, что дополнительная охрана... может стать вам помехой... но, может, это будет кто-нибудь из ваших знакомых? Скажем, старый друг, мастер Кеноби.
Вполне возможно.
Он как раз вернулся с границы Ансиона.
Сделайте это для меня, миледи. Прошу вас. Мысль, что мы можем вас потерять... невыносима.
Я велю Оби-Вану прибыть к вам немедленно, миледи. Амидала
Благодарю вас, мастер Винду.
Что, не терпится?
- Ничуть.
- Точно так же было, когда мы рухнули в гнездо гандарков.
В этот кошмар рухнули вы, мастер, а я вас спас, помните?
О, да. Ты вспотел. Расслабься.Дыши глубже.
Я не видел ее десять лет, мастер. Оби? Оби!
Моя колоссально рад видеть тебя.
- Рад встрече, Джа-Джа.
- Сенатор Падме.
Мои друзья здеся. Гляньте-гляньте, сенатор. Джедаи приехать.
Счастлив вновь вас видеть, миледи.
Да, много воды утекло, мастер Кеноби.
Эни? Боже мой, ты вырос.
Ты тоже. Я хотел сказать, ты стала еще красивее. То есть для сенатора...
Эни, ты по-прежнему мальчишка, каким был на Татуине.
Уверяю вас, миледи, наше присутствие будет незримым.
Я капитан Тайфо из службы безопасности Ее Величества. Королева Джамиля знает о вашем назначении.
Я рад, что вы здесь, мастер Кеноби.
Ситуация опаснее, чем полагает сенатор.
Мне нужна не охрана, а ответы. Я хочу знать, кто пытался меня убить?
Мы здесь, чтобы защищать вас, сенатор, а не заниматься расследованием.
Мы выясним, кто хотел убить тебя, Падме. Я обещаю.
- Мы не можем превышать... свои полномочия, мой юный Падаван.
Я считаю, что это в интересах ее защиты, мастер.
Давай не будем опять возвращаться к этому вопросу, Анакин...
- и ты будешь меня слушаться.
- Почему?
Что?
Для чего, вы думаете, нас сюда послали, если не на поиски убийцы?
    </string>
    <string name="Behavior">Бехейвор</string>
</resources>